<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.renato.encuentrameapp.Login2Activity"
    android:gravity="center"
    android:background="@drawable/fondo"
    >

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_txt"
        android:layout_marginBottom="@dimen/small"
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_marginBottom="@dimen/small"
        android:hint="@string/login_nombre"

        />
    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_marginBottom="@dimen/small"
        android:hint="@string/login_apellido"

        />

    <EditText
        android:id="@+id/usr1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_marginBottom="@dimen/small"
        android:hint="@string/login_usr"

        />
    <EditText
        android:id="@+id/pass1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/small"
        android:hint="@string/login_pass"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn1"
            android:layout_marginBottom="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn2"
            android:background="#ffaa1a" />


        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn3"
            android:textColor="#ffffff"
            android:background="#2d609b"


            />


    </LinearLayout>



</LinearLayout>